Закончил верстку страниц, сделал попапы, поиск

--- a/src/html/components/_main-price.htm
+++ b/src/html/components/_main-price.htm
@@ -28,8 +28,8 @@
                                         <div class="old-price">600 ₽</div>
                                         <div class="new-price">540 ₽</div>
                                     </div>
-                                    <button type="button" data-name="Прием врача-стоматолога первичный"
-                                        class="btn-form">Записаться</button>
+                                    <button type="button" data-name="Прием врача-стоматолога первичный" class="btn-form"
+                                        data-call-service>Записаться</button>
                                 </div>
                             </div>
                             <div class="prices__item">
@@ -42,8 +42,8 @@
                                         <div class="old-price">600 ₽</div>
                                         <div class="new-price">540 ₽</div>
                                     </div>
-                                    <button type="button" data-name="Прием врача-стоматолога повторный"
-                                        class="btn-form">Записаться</button>
+                                    <button type="button" data-name="Прием врача-стоматолога повторный" class="btn-form"
+                                        data-call-service>Записаться</button>
                                 </div>
                             </div>
                             <div class="prices__item">
@@ -57,7 +57,7 @@
                                         <div class="new-price">540 ₽</div>
                                     </div>
                                     <button type="button" data-name="Прием Главного врача Конищева В.К."
-                                        class="btn-form">Записаться</button>
+                                        class="btn-form" data-call-service>Записаться</button>
                                 </div>
                             </div>
                         </div>
