--- a/src/html/components/_services-single.htm
+++ b/src/html/components/_services-single.htm
@@ -19,98 +19,13 @@
                         <a href="#">вопрос-ответ</a>
                     </li>
                 </ul>
-                <ul class="service__list">
-                    <li>
-                        <a href="#">
-                            <span>Кариес</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Перелечивание зуба</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Пломбирование каналов</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Эндодонтия</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Киста зуба</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Лечение под микроскопом</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Пульпит</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Периодонтит</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Пломбирование зуба</span>
-                            <span class="icon">
-                                <svg>
-                                    <use xlink:href="@img/icons/sprite.svg#arrow-slider"></use>
-                                </svg>
-                            </span>
-                        </a>
-                    </li>
-                </ul>
+                <div class="service__descr" data-editor>
+                    <p>Костная пластика в стоматологии — это процесс восстановления костной ткани челюсти в участке
+                        отсутствующих зубов. Обычно
+                        проводят перед имплантацией зубов, когда нужно увеличить объем кости, тем самым повысив
+                        эффективность фиксации
+                        искусственных зубных корней.</p>
+                </div>
                 <div class="service__btn">
                     <button type="submit" class="btn-form">Записаться на прием</button>
                 </div>
