--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -183,7 +183,7 @@
 				right: 0;
 				height: calc(100% + 0px);
 				width: auto;
-				background-color: #fff;
+				background-color: #eaf3fa;
 				box-shadow: 5px 0px 23px -19px rgba(0, 0, 0, 0.6) inset;
 				opacity: 0;
 				visibility: hidden;
