--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -184,6 +184,8 @@ body {
 @import "./components/error";
 @import "./components/works";
 @import "./components/page-search";
+@import "./components/about";
+@import "./components/chart";
 
 // Подключение стилей отдельных страниц
 @import "home";
