--- a/src/scss/base/forms/forms.scss
+++ b/src/scss/base/forms/forms.scss
@@ -34,7 +34,7 @@
 
 // <SELECT>
 // Сниппет (HTML): sel
-// @import "select";
+@import "select";
 
 // <RATING>
 // Сниппет (HTML): rating
@@ -50,4 +50,4 @@
 
 // <CALENDAR>
 // Сниппет (HTML):
-// @import "datepicker";
+@import "datepicker";
