--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -1,19 +1,47 @@
 .advantages {
 	background: #eaf3fa;
 	padding: 80px 0;
+
+	@media (max-width: $tablet) {
+		padding: 60px 0;
+	}
+
+	@media (max-width: $mobile) {
+		padding: 40px 0;
+	}
 	&__body {
 		display: grid;
 		grid-template-columns: repeat(6, 1fr);
 		gap: 30px;
+
+		@media (max-width: $tablet) {
+			grid-template-columns: repeat(3, 1fr);
+			justify-items: center;
+		}
+
+		@media (max-width: $mobile) {
+			grid-template-columns: repeat(2, 1fr);
+			gap: 20px;
+		}
 	}
 	&__item {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		gap: 40px;
+		@media (max-width: 1740px) {
+			gap: 20px;
+		}
 		.media {
+			flex: 0 0 110px;
 			width: 110px;
 			height: 100px;
+
+			@media (max-width: 1740px) {
+				flex: 0 0 84px;
+				width: 84px;
+				height: 84px;
+			}
 		}
 
 		.text {
@@ -24,6 +52,9 @@
 			font-weight: 400;
 			line-height: 21px;
 			letter-spacing: 0.96px;
+			@media (max-width: 1740px) {
+				font-size: 18px;
+			}
 		}
 	}
 }
