--- a/src/scss/components/_expert-card.scss
+++ b/src/scss/components/_expert-card.scss
@@ -2,6 +2,10 @@
 	&__body {
 		display: grid;
 		grid-template-columns: 1fr 450px;
+
+		@media (max-width: $tablet) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 	}
 	&__content {
 	}
@@ -12,6 +16,12 @@
 		justify-content: space-between;
 		align-items: center;
 		gap: 100px;
+
+		@media (max-width: 1360px) {
+			flex-direction: column;
+			gap: 30px;
+			padding: 20px;
+		}
 	}
 	&__title {
 		color: $color-title;
@@ -21,13 +31,28 @@
 		font-weight: 400;
 		line-height: 130%;
 		letter-spacing: 0.96px;
+
+		@media (max-width: $tablet) {
+			font-size: 24px;
+		}
+
+		@media (max-width: $mobile) {
+			font-size: 20px;
+		}
 	}
 	&__feedback {
 	}
 	&__descr {
 		padding: 40px 75px 0 0;
+
+		@media (max-width: $tablet) {
+			padding: 20px 0;
+		}
 	}
 	&__avatar {
+		@media (max-width: $tablet) {
+			order: -1;
+		}
 	}
 	&__media {
 	}
@@ -36,5 +61,9 @@
 		grid-template-columns: repeat(2, 1fr);
 		gap: 20px;
 		padding: 25px 0 0 0;
+
+		@media (max-width: $mobile) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 	}
 }
