--- a/src/scss/components/_service.scss
+++ b/src/scss/components/_service.scss
@@ -3,16 +3,43 @@
 		display: grid;
 		grid-template-columns: 840px 1fr;
 		gap: 100px;
+
+		@media (max-width: 1740px) {
+			grid-template-columns: 540px 1fr;
+			gap: 60px;
+		}
+
+		@media (max-width: $tablet) {
+			grid-template-columns: repeat(1, 1fr);
+			gap: 26px;
+		}
+	}
+	&__media {
+		picture {
+			height: 100%;
+		}
 	}
 	&__content {
+		@media (max-width: $tablet) {
+			display: contents;
+		}
 		.title {
 			margin-bottom: 30px;
+
+			@media (max-width: $tablet) {
+				order: -1;
+				margin-bottom: 0;
+			}
 		}
 		.page {
 			&__list {
 				display: flex;
 				gap: 16px;
 				margin-bottom: 30px;
+
+				@media (max-width: $tablet) {
+					margin-bottom: 0;
+				}
 				li {
 					a {
 						display: inline-block;
@@ -36,6 +63,14 @@
 		flex-wrap: wrap;
 		gap: 20px;
 		margin-bottom: 30px;
+
+		@media (max-width: 1360px) {
+			gap: 15px;
+		}
+
+		@media (max-width: $tablet) {
+			margin-bottom: 0;
+		}
 		li {
 			a {
 				display: flex;
@@ -45,8 +80,12 @@
 				color: $accentColor;
 				border-radius: 100px;
 				border: 1px solid #20b2ff;
-				padding: 5px 10px;
+				padding: 0px 10px;
+				font-size: 20px;
 				transition: all 0.3s ease 0s;
+				@media (max-width: 1360px) {
+					font-size: 18px;
+				}
 				.icon {
 					width: 20px;
 					height: 20px;
@@ -61,14 +100,29 @@
 			}
 		}
 	}
+	&__descr {
+		margin-bottom: 30px;
+		@media (max-width: $tablet) {
+			margin-bottom: 0;
+		}
+	}
 	&__btn {
 		.btn-form {
 			max-width: 340px;
+
+			@media (max-width: $mobileSmall) {
+				max-width: 100%;
+			}
 		}
 	}
 	&__wrapper {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		gap: 70px;
+
+		@media (max-width: $tablet) {
+			grid-template-columns: repeat(1, 1fr);
+			gap: 30px;
+		}
 	}
 }
