--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -210,7 +210,6 @@
 			display: flex;
 			flex-direction: column;
 			z-index: 100;
-			height: 454px;
 			gap: 15px;
 			top: 68px;
 			left: -30px;
@@ -222,13 +221,14 @@
 			transition: all 0.2s ease 0s;
 			box-shadow: 4px 0px 18px -3px rgba(0, 0, 0, 0.2);
 			li {
+				height: 100%;
 				a {
 					color: $mainColor;
 					font-family: HattoriHanzo;
 					font-size: 18px;
 					font-style: normal;
 					font-weight: 300;
-					line-height: 140%; /* 25.2px */
+					line-height: 110%; /* 25.2px */
 					letter-spacing: 0.54px;
 					text-transform: uppercase;
 					transition: all 0.3s ease 0s;
@@ -291,7 +291,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-
+		margin-bottom: 20px;
 		.name {
 			color: $color-title;
 			font-family: BebasNeueCyrillic;
@@ -411,6 +411,126 @@
 		display: flex;
 		flex-direction: column;
 		gap: 7px;
+	}
+}
+
+.header__search {
+	.b-search {
+		position: relative;
+		width: 100%;
+		&__form {
+			height: 32px;
+			width: 32px;
+		}
+		&__icon {
+			position: static;
+			transform: none;
+		}
+		.input--search {
+			opacity: 0;
+			position: absolute;
+			right: -54px;
+			top: 50%;
+			transform: translateY(-50%);
+			transition: 0.2s ease;
+			visibility: hidden;
+			border-radius: 4px;
+			overflow: hidden;
+			width: 420px !important;
+			.input__field {
+				color: #293a46;
+				font-size: 22px;
+				font-style: normal;
+				font-weight: 300;
+				line-height: 30px;
+				letter-spacing: 0.66px;
+				outline: none;
+				padding: 6px 48px 6px 14px;
+				transition: 0.2s ease;
+				width: 100%;
+				border: none;
+				&::placeholder {
+					transition: opacity 0.3s;
+					color: #90a6b5;
+				}
+				&:focus::placeholder {
+					opacity: 0;
+				}
+			}
+		}
+
+		&.is-open {
+			.input--search {
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+	}
+
+	.btn-search {
+		transition: all 0.3s ease 0s;
+		&.is-open {
+			color: #929394;
+		}
+	}
+	.input--search {
+		background-color: #fff;
+	}
+}
+
+.b-search__form {
+	align-items: center;
+	display: flex;
+	position: relative;
+	width: 100%;
+	z-index: 2;
+}
+
+.b-search__icon {
+	height: 32px;
+	position: absolute;
+	right: 24px;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 32px;
+	z-index: 2;
+}
+
+.menu-mible__search {
+	.btn-search {
+		margin-left: 0;
+		color: #929394;
+	}
+	.b-search__icon {
+		right: 18px;
+	}
+
+	.input--search {
+		width: 100%;
+		border-radius: 4px;
+		overflow: hidden;
+		border: 1px solid #929394;
+	}
+
+	.input__field {
+		width: 100%;
+		color: #293a46;
+		font-size: 22px;
+		font-style: normal;
+		font-weight: 300;
+		line-height: 30px;
+		letter-spacing: 0.66px;
+		outline: none;
+		padding: 6px 48px 6px 14px;
+		transition: 0.2s ease;
+		border: none;
+		&::placeholder {
+			transition: opacity 0.3s;
+			color: #90a6b5;
+		}
+		&:focus::placeholder {
+			opacity: 0;
+		}
 	}
 }
 
