--- a/src/scss/components/_sales.scss
+++ b/src/scss/components/_sales.scss
@@ -71,6 +71,9 @@
 			font-weight: 300;
 			line-height: normal;
 			letter-spacing: 0.42px;
+			padding: 3px 7px;
+			background-color: $accentColor;
+			border-radius: 10px;
 		}
 	}
 	&__wrapper {
