--- a/src/scss/components/_expert-card-certificates.scss
+++ b/src/scss/components/_expert-card-certificates.scss
@@ -3,5 +3,9 @@
 		display: grid;
 		grid-template-columns: 1fr 450px;
 		gap: 25px;
+
+		@media (max-width: 1360px) {
+			grid-template-columns: 1fr;
+		}
 	}
 }
