--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -243,176 +243,240 @@
 	}
 }
 
-.menu-mobile {
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	max-width: 510px;
-	padding: 26px 30px;
-	min-height: 0;
-	display: flex;
-	flex-direction: column;
-	background-color: #fff;
-	justify-content: start;
-	overflow-y: auto;
-	overflow-x: hidden;
-	gap: 0;
-	transform: translateX(100%);
-	transition: all 0.6s ease 0s;
-	z-index: 150;
-	.menu-open & {
-		transform: translateX(0%);
-	}
+//=============================
+.mobile {
+	display: none;
+	opacity: 0;
+	visibility: hidden;
+}
+/*responsive*/
+@media (max-width: 1360px) {
+	.mobile {
+		display: block;
+		opacity: 1;
+		visibility: visible;
+		.menu-overlay {
+			position: fixed;
+			background-color: rgba(0, 0, 0, 0.5);
+			right: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 1098;
+			visibility: hidden;
+			opacity: 0;
+			transition: all 0.5s ease;
 
-	&__overlay {
-		backdrop-filter: blur(3px);
-		background: rgba(23, 23, 23, 0.4);
-		position: fixed;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		width: 100%;
-		height: 100vh;
-		opacity: 0;
-		visibility: hidden;
-		transform: translateX(100%);
-		transition: 0.6s ease;
-		z-index: 140;
-
-		.menu-open & {
-			opacity: 1;
-			visibility: visible;
-			transform: translateX(0%);
+			&.active {
+				visibility: visible;
+				opacity: 1;
+			}
 		}
-	}
 
-	&__header {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		margin-bottom: 20px;
-		.name {
+		.mobile-menu-name {
 			color: $color-title;
 			font-family: BebasNeueCyrillic;
 			font-size: 30px;
+			font-style: normal;
 			font-weight: 400;
+			line-height: normal;
 			text-transform: uppercase;
+			padding-left: 15px;
 		}
 
-		.icon {
-			width: 30px;
-			height: 30px;
+		.menu-mobile__contacts {
+			margin-top: 20px;
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
 		}
+		.mobile-menu {
+			position: fixed;
+			width: 320px;
+			background-color: #ffffff;
+			right: 0;
+			top: 0;
+			height: 100%;
+			overflow: hidden;
+			transform: translate(100%);
+			transition: all 0.5s ease;
+			z-index: 1099;
 
-		.close {
-			padding: 0;
-			margin: 0;
-			border: none;
-		}
-	}
+			&.active {
+				transform: translate(0%);
+			}
 
-	&__body {
-		width: 100%;
-		padding: 20px 0px;
-		border-bottom: 1px solid #b9c7d2;
-	}
-	&__list {
-		display: flex;
-		flex-direction: column;
-		gap: 12px;
-		align-items: start;
-		width: 100%;
+			.mobile-wrapper {
+				min-height: 0;
+				height: 100%;
+				overflow-x: hidden;
+				overflow-y: auto;
+				padding: 15px 15px 100px;
+				.menu-main {
+					padding: 13px 0;
+					border-bottom: 1px solid #b9c7d2;
+				}
+				ul {
+					li {
+						line-height: 1;
+						margin: 0;
+						display: block;
+						a {
+							position: relative;
+							padding: 7px 30px 7px 0px;
+							display: block;
+							color: $mainColor;
+							font-size: 20px;
+							font-style: normal;
+							font-weight: 300;
+							letter-spacing: 0.6px;
+							transition: all 0.3s ease 0s;
+							@media (any-hover: hover) {
+								&:hover {
+									color: $accentColor;
+								}
+							}
 
-		& > li {
-		}
+							i {
+								position: absolute;
+								height: 100%;
+								width: 21px;
+								top: 0;
+								right: 0;
+								text-align: center;
+								line-height: 50px;
+								display: flex;
+								justify-content: center;
+								align-items: center;
+								color: #c9d6df;
+							}
+						}
 
-		li {
-			position: relative;
-			width: 100%;
-			a {
-				color: $mainColor;
-				font-size: 20px;
-				font-weight: 300;
-				line-height: 140%;
-				letter-spacing: 0.6px;
-				text-transform: uppercase;
-				transition: all 0.3s ease 0s;
+						.sub-menu {
+							visibility: visible;
+							opacity: 1;
+							position: absolute;
+							box-shadow: none;
+							margin: 0;
+							padding: 15px;
+							top: 0;
+							left: 0;
+							width: 100%;
+							height: 100%;
+							padding-top: 65px;
+							max-width: none;
+							min-width: auto;
+							display: none;
+							transform: translateX(0%);
+							overflow-y: auto;
+							background-color: #fff;
+							z-index: 500;
+							transition: all 0.5s ease;
+
+							&.active {
+								display: block;
+							}
+						}
+
+						//========
+					}
+				}
+			}
+
+			.mobile-menu-head {
 				display: flex;
+				height: 50px;
+				border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 				justify-content: space-between;
-				gap: 10px;
 				align-items: center;
+				position: relative;
+				z-index: 501;
+				position: sticky;
+				background-color: #ffffff;
+				top: 0;
 
-				@media (any-hover: hover) {
-					&:hover {
-						color: $accentColor;
+				&.active {
+					.go-back {
+						display: flex;
+					}
+					.mobile-menu-name {
+						display: none;
 					}
 				}
 
-				.arrow {
-					flex: 0 0 20px;
-					width: 20px;
-					height: 20px;
-					transition: all 0.3s ease 0s;
-					display: block;
-					opacity: 1;
-					visibility: visible;
+				.go-back {
+					height: 50px;
+					flex: 0 0 50px;
+					width: 50px;
+					border-right: 1px solid rgba(0, 0, 0, 0.1);
+					cursor: pointer;
+					line-height: 50px;
+					text-align: center;
+					color: #000000;
+					font-size: 16px;
+					display: none;
+					justify-content: center;
+					align-items: center;
+
+					.icon {
+						transform: rotate(180deg);
+						height: 100%;
+						width: 21px;
+						color: #c9d6df;
+					}
+				}
+
+				.current-menu-title {
+					text-align: center;
+					padding: 0 15px;
+					font-size: 14px;
+					line-height: 120%;
+					font-weight: 500;
+					color: $accentColor;
+				}
+
+				.mobile-menu-close {
+					flex: 0 0 50px;
+					height: 50px;
+					width: 50px;
+					border-left: 1px solid rgba(0, 0, 0, 0.1);
+					cursor: pointer;
+					line-height: 50px;
 					display: flex;
 					justify-content: center;
 					align-items: center;
-				}
-			}
-
-			&._open {
-				> .sub-menu {
-					max-height: 1000px;
-					opacity: 1;
-					visibility: visible;
-				}
-
-				> a > .arrow {
-					transform: rotate(90deg);
-				}
-
-				> a {
-					color: $accentColor;
-				}
-			}
-		}
-		.sub-menu {
-			display: flex;
-			flex-direction: column;
-			gap: 5px;
-			background-color: #fff;
-			opacity: 0;
-			visibility: hidden;
-			max-height: 0;
-			overflow: hidden;
-			transition:
-				max-height 0.3s ease,
-				opacity 0.3s ease;
-			padding: 0px 0px 0px 10px;
-
-			li {
-				a {
-					color: $mainColor;
-					text-transform: none;
-					font-size: 22px;
-					font-weight: 300;
-					line-height: 120%;
-					letter-spacing: 0.66px;
+					.icon {
+						height: 30px;
+						width: 30px;
+					}
 				}
 			}
 		}
 	}
 
-	&__contacts {
-		padding-top: 20px;
-		display: flex;
-		flex-direction: column;
-		gap: 7px;
+	@keyframes slideLeft {
+		0% {
+			opacity: 0;
+			transform: translateX(100%);
+		}
+		100% {
+			opacity: 1;
+			transform: translateX(0%);
+		}
+	}
+	@keyframes slideRight {
+		0% {
+			opacity: 1;
+			transform: translateX(0%);
+		}
+		100% {
+			opacity: 0;
+			transform: translateX(100%);
+		}
 	}
 }
+
+//=============================
 
 .header__search {
 	.b-search {
@@ -496,13 +560,13 @@
 	z-index: 2;
 }
 
-.menu-mible__search {
+.menu-mobile__search {
 	.btn-search {
 		margin-left: 0;
 		color: #929394;
 	}
 	.b-search__icon {
-		right: 18px;
+		right: 8px;
 	}
 
 	.input--search {
@@ -521,7 +585,7 @@
 		line-height: 30px;
 		letter-spacing: 0.66px;
 		outline: none;
-		padding: 6px 48px 6px 14px;
+		padding: 6px 42px 6px 14px;
 		transition: 0.2s ease;
 		border: none;
 		&::placeholder {
